updated ex5 and required changes

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
-<project
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-        xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.sorcersoft.sorcer</groupId>
@@ -30,7 +29,8 @@
         <module>sos-providers</module>
         <module>tools</module>
         <module>examples</module>
-    </modules>
+    <module>account</module>
+  </modules>
 
 	<developers>
 		<developer>
@@ -40,13 +40,13 @@
 			<organization>SorcerSoft S.A.</organization>
 		</developer>
 		<developer>
-			<name>Paweł Rubach</name>
+			<name>Pawe? Rubach</name>
 			<id>prubach</id>
 			<timezone>+1</timezone>
 			<organization>SorcerSoft S.A.</organization>
 		</developer>
 		<developer>
-			<name>Rafał Krupiński</name>
+			<name>Rafa? Krupi?ski</name>
 			<id>rafalkrupinski</id>
 			<timezone>+1</timezone>
 			<organization>SorcerSoft S.A.</organization>
