--- a/examples/first/pom.xml
+++ b/examples/first/pom.xml
@@ -5,9 +5,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>examples</artifactId>
 		<version>11.1</version>
-		<artifactId>sorcer-root</artifactId>
-		<relativePath/>
 	</parent>
 
 	<groupId>com.example.sorcer</groupId>
