--- a/sos/sos-tests/int-tests/pom.xml
+++ b/sos/sos-tests/int-tests/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>sos</artifactId>
+		<artifactId>sos-tests</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<version>11.1</version>
 	</parent>
