--- a/sos/sos-tests/ju-arithmetic/pom.xml
+++ b/sos/sos-tests/ju-arithmetic/pom.xml
@@ -4,13 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<artifactId>sos</artifactId>
+		<artifactId>sos-tests</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<version>11.1</version>
 	</parent>
+
 	<packaging>pom</packaging>
 	<artifactId>ju-arithmetic</artifactId>
 	<name>SORCER sorcer-int-tests :: ju-arithmetic</name>
+
 	<modules>
 		<module>ju-arithmetic-api</module>
 		<module>ju-arithmetic-prv</module>
