--- a/examples/ex2/ex2-api/pom.xml
+++ b/examples/ex2/ex2-api/pom.xml
@@ -18,6 +18,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
-        </dependency>    </dependencies>
+        	<version>${v.sorcer}</version>
+        </dependency>
+    </dependencies>
 </project>
