--- a/examples/ex3/ex3-req/pom.xml
+++ b/examples/ex3/ex3-req/pom.xml
@@ -22,12 +22,12 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-	    <version>${project.version}</version>
+	    <version>${v.sorcer}</version>
         </dependency>
 	<dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-req</artifactId>
-            <version>${project.version}</version>
+            <version>${v.sorcer}</version>
         </dependency>
     </dependencies>
 </project>
