--- a/examples/ex6/ex6-prv/pom.xml
+++ b/examples/ex6/ex6-prv/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
+        	<version>${v.sorcer}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -30,12 +30,12 @@
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>commons-prv</artifactId>
-            <version>${project.version}</version>
+            <version>${v.sorcer}</version>
         </dependency>
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>dbp-prv</artifactId>
-            <version>${project.version}</version>
+            <version>${v.sorcer}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.river</groupId>
@@ -51,6 +51,7 @@
         <dependency>
             <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
+            <version>${v.rio}</version>
         </dependency>
     </dependencies>
 </project>
