--- a/examples/ex6/ex6-req/pom.xml
+++ b/examples/ex6/ex6-req/pom.xml
@@ -27,12 +27,12 @@
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
-        	<version>${project.version}</version>
+        	<version>${v.sorcer}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>commons-req</artifactId>
-			<version>${project.version}</version>
+			<version>${v.sorcer}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.maven</groupId>
