--- a/examples/first/pom.xml
+++ b/examples/first/pom.xml
@@ -29,27 +29,13 @@
 	</modules>
 
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-maven-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>sorcer-init</id>
-						<goals>
-							<goal>initialize</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
 	</build>
 
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.sorcersoft.sorcer</groupId>
-				<artifactId>sorcer-api</artifactId>
+				<artifactId>sos-platform</artifactId>
 				<version>${v.sorcer}</version>
 			</dependency>
 		</dependencies>
