Sorcer version updated to 13.1, added jars installer

--- a/bin/sos-providers/exerter-prv.config
+++ b/bin/sos-providers/exerter-prv.config
@@ -10,7 +10,7 @@ import sorcer.core.*;
 import net.jini.core.entry.Entry;
 import net.jini.lookup.entry.*;
 import sorcer.core.provider.*;
-import sorcer.util.ExertManager;
+import sorcer.util.ExertProcessor;
 import sorcer.service.Exerter;
 
 sorcer.core.provider.ServiceProvider {
@@ -28,7 +28,7 @@ sorcer.core.provider.ServiceProvider {
 		exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
 		
 		// service beans
-		beanClasses = new Class[] { sorcer.util.ExertManager.class };
+		beanClasses = new Class[] { sorcer.util.ExertProcessor.class };
 		
 		iconName="sorcer.jpg";
 }
