--- a/configs/boot-http-sorcer.config
+++ b/configs/boot-http-sorcer.config
@@ -111,9 +111,13 @@ com.sun.jini.start {
 /*
 		// MutualExclusion - Locker
   		new SorcerServiceDescriptor(
-           "lockmgr-dl.jar",
-           policy, 
+           "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker")
+           policy,
             ConfigUtil.concat(new Object[] {
+            	Resolver.resolveAbsolute("org.jgroups:jgroups"), ps,
+            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
+            	Resolver.resolveAbsolute("com.sleepycat:je"), ps,
+
             	blitzLib, "${/}lockmgr.jar",
             	ps, otherLib, "${/}jgroups.jar",
             	ps, home, "${/}lib${/}river${/}lib-dl${/}outrigger-dl.jar",
