--- a/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
+++ b/sos/sos-env/src/main/resources/META-INF/maven/repolayout.properties
@@ -1,7 +1,7 @@
-net.jini = river
-net.jini.lookup = river
+net.jini = jini
+net.jini.lookup = jini-lookup
 org.apache.river = river
 org.rioproject = rio
-org.rioproject.resolver = rio
+org.rioproject.resolver = rio-resolver
 org.sorcersoft.sorcer = sorcer
 org.sorcersoft.sigar = sigar/lib
