--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sorcer-root</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-	<version>11.1</version>
+	<version>13.1</version>
     </parent>
     <artifactId>distribution</artifactId>
     <name>SORCER distribution</name>
@@ -99,11 +99,14 @@
             <artifactId>browser</artifactId>
             <version>${project.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>dependencies</artifactId>
             <version>${project.version}</version>
+            <scope>import</scope>
         </dependency>
+
         <dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>locker</artifactId>
@@ -135,6 +138,11 @@
         <!--    rio -->
         <dependency>
             <groupId>org.rioproject</groupId>
+            <artifactId>rio-api</artifactId>
+            <version>${v.rio}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.rioproject</groupId>
             <artifactId>rio-platform</artifactId>
             <version>${v.rio}</version>
         </dependency>
@@ -142,6 +150,13 @@
             <groupId>org.rioproject</groupId>
             <artifactId>rio-start</artifactId>
             <version>${v.rio}</version>
+            <exclusions>
+                <!-- use org.apache.river:start:${v.jini} instead -->
+                <exclusion>
+                    <groupId>net.jini</groupId>
+                    <artifactId>start</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.rioproject.resolver</groupId>
@@ -161,6 +176,13 @@
             <artifactId>maven-ant-tasks</artifactId>
             <version>2.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.1_3</version>
+        </dependency>
+
+
 
     </dependencies>
 
