--- a/distribution/src/main/examples/pom.xml
+++ b/distribution/src/main/examples/pom.xml
@@ -43,7 +43,23 @@
                 <target>1.6</target>
             </configuration>
         </plugin>
-        </plugins>
+      <!--            <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-antrun-plugin</artifactId>
+                      <version>1.7</version>
+                      <executions>
+                          <execution>
+                              <id>initialize</id>
+                              <phase>initialize</phase>
+                              <configuration>
+                              </configuration>
+                              <goals>
+                                  <goal>run</goal>
+                              </goals>
+                          </execution>
+                      </executions>
+                  </plugin>-->
+      </plugins>
     </build>
     <repositories>
         <repository>
