--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sos</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>11.1</version>
+        <version>13.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -34,6 +34,11 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.1</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
