Removed AFRL location from configs, fixed exerter config

--- a/bin/sos-providers/exertmonitor.config
+++ b/bin/sos-providers/exertmonitor.config
@@ -14,11 +14,10 @@ sorcer.core.provider.ServiceProvider {
 	name = "Exert Monitor";
 	publishedInterfaces = new Class[] { sorcer.core.provider.exertmonitor.MonitoringManagement.class };
 	description = "SORCER Exertion Execution Monitoring service";
-	//location="AFRL/RBSD-146";
 	entries = new Entry[] { 
 		//QosServiceProvider.getActiveSlasUIDescriptor(),
 		new Comment("Welcome to exertion-oriented programming!"), 
-		new Location("2", "218", "AFRL/RBSD-146") };
+		new Location("", "", "Sorcersoft.com") };
 	
 	// if not declared the default exporter is BasicJeriExporter
 	//exporter = new JrmpExporter(0);
