--- a/bin/sos-providers/spacer.config
+++ b/bin/sos-providers/spacer.config
@@ -15,10 +15,10 @@ sorcer.core.provider.ServiceProvider {
     name=Sorcer.getSpacerName();
     publishedInterfaces = new Class[] { sorcer.service.Spacer.class };
     description = "Spacer";
-    location = "SORCER Lab 20B - CS TTU";
+	location = "Sorcersoft.com Lab";
     entries = new Entry[] {
 		new Comment("Welcome to exertion-oriented space-based programming!"), 
-		new Location("2", "218", "AFRL/RBSD-146") };
+		new Location("", "", "Sorcersoft.com") };
 		
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
