--- a/examples/ex1/boot-prv/configs/whoIsIt2-prv.config
+++ b/examples/ex1/boot-prv/configs/whoIsIt2-prv.config
@@ -12,10 +12,10 @@ import java.util.logging.Level;
 sorcer.core.provider.ServiceProvider {
 		name="ABC";
 		description = "SORCER \"Who Is It?\" provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
 			new Comment("Returns provider's host name and address"), 
-			new Location("1", "218", "146-AFRL") };
+			new Location("", "", "Sorcersoft.com") };
 		
 		// PULL execution related
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };
