--- a/examples/ex5/ex5-req/src/main/resources/META-INF/sorcer/exertlet-prv.config
+++ b/examples/ex5/ex5-req/src/main/resources/META-INF/sorcer/exertlet-prv.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
 		name = "Arithmetic Exertleter";
 		description = "Exert an injected arithmetic exertion bean-exertleter";
-		location = "AFRL";
+		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] { sorcer.service.Invocation.class, sorcer.service.Evaluation.class };
 			
 		// service beans	
