--- a/sos-providers/exerter/exerter-prv/src/main/resources/META-INF/sorcer/exerter-prv.config
+++ b/sos-providers/exerter/exerter-prv/src/main/resources/META-INF/sorcer/exerter-prv.config
@@ -16,7 +16,7 @@ sorcer.core.provider.ServiceProvider {
         /* service provider deployment properties */
 		name = "Exerter";
 		description = "Exert Provider for SOS, the network version of ExertManager";
-		location = "AFRL";
+		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] { 
 			sorcer.service.Exerter.class };
 			
