--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/adder-prv.config
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/adder-prv.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
 		name = "Adder";
 		description = "Adder - bean provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Adder.class };
 
 		spaceEnabled = true;
