--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/divider-prv.config
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/divider-prv.config
@@ -16,7 +16,7 @@ sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
 		name = "Divider";
 		description = "Divider - bean provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] { junit.sorcer.core.provider.Divider.class };
 
 		spaceEnabled = true;
