--- a/bin/sos-providers/cataloger.config
+++ b/bin/sos-providers/cataloger.config
@@ -10,11 +10,10 @@ sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
 		publishedInterfaces = new Class[] { sorcer.core.Cataloger.class };
 		description = "Dynamic catalog of SORCER service providers";
-		location = "Wright-Patterson Air Force Base, Air Force Research Laboratory";
-		spaceEnabled = false;
+		location = "Sorcersoft.com Lab";		spaceEnabled = false;
 		entries = new Entry[] { 
 			new Comment("Welcome to exertion-oriented programming!"), 
-			new Location("2", "218", "AFRL/RQSE-146") };
+			new Location("", "", "Sorcersoft.com") };
 
         // if not declared the default exporter is BasicJeriExporter
         // exporter = new JrmpExporter(0);
