--- a/bin/sos-providers/logger.config
+++ b/bin/sos-providers/logger.config
@@ -18,10 +18,10 @@ sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
 	name = "Logger";
 	description = "A remote Log Manager";
-	location = "SORCER Lab, CP310 - CS TTU";
+	location = "Sorcersoft.com Lab";
 	publishedInterfaces = new Class[] { sorcer.core.provider.logger.RemoteLogger.class };
 	// add service UI
-	entries = new Entry[] { new Location("2", "218", "AFRL/RQSE-146") };
+	entries = new Entry[] { new Location("", "", "Sorcersoft.com") };
 
 	// if not declared the default exporter is BasicJeriExporter
     	//exporter = new JrmpExporter(0);
