--- a/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt-prv.config
+++ b/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt-prv.config
@@ -12,7 +12,7 @@ import java.util.logging.Level;
 sorcer.core.provider.ServiceProvider {
 		name="WhoIsIt?";
 		description = "SORCER \"Who Is It?\" provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
 			new Comment("Returns provider's host name and address"), 
 			new Location("2", "218", "146") };
