--- a/examples/ex1/run-bean/configs/whoIsIt-bean2.config
+++ b/examples/ex1/run-bean/configs/whoIsIt-bean2.config
@@ -19,14 +19,14 @@ sorcer.core.provider.ServiceProvider {
         /* service provider generic properties */
 		name = "Bean2-WhoIsIt?";
 		description = "Example of a bean provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };
 		
 		// add service UI
 		//entries = new Entry[] { WhoIsItBean.getUIDescriptor(),  
 		entries = new Entry[] { 
 			new Comment("It uses ServiceUI for accessing beans"), 
-			new Location("1", "218", "146-AFRL") };
+			new Location("", "", "Sorcersoft.com") };
 			
 		// local private logging available via by RmoteLogger
 		remoteContextLogging = true;
