--- a/examples/ex1/run-prv/configs/whoIsIt1-prv.config
+++ b/examples/ex1/run-prv/configs/whoIsIt1-prv.config
@@ -11,10 +11,10 @@ import sorcer.ex1.*;
 sorcer.core.provider.ServiceProvider {
 		name="XYZ";
 		description = "SORCER \"Who Is It?\" provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
 			new Comment("Returns provider's host name and address"), 
-			new Location("1", "218", "146-AFRL") };
+			new Location("", "", "Sorcersoft.com") };
 			
 		// PULL execution related
 		publishedInterfaces = new Class[] { sorcer.ex1.WhoIsIt.class };
