--- a/examples/ex2/configs/worker1-prv.config
+++ b/examples/ex2/configs/worker1-prv.config
@@ -12,10 +12,10 @@ sorcer.core.provider.ServiceProvider {
 		name="Worker1";
 		publishedInterfaces = new Class[] { sorcer.ex2.provider.Worker.class };
 		description = "SORCER Worker provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		entries = new Entry[] { 
 			new Comment("Implements Worker interface with three operations"), 
-			new Location("1", "218", "146-AFRL") };
+			new Location("", "", "Sorcersoft.com") };
 			
         exporter = new BasicJeriExporter(TcpServerEndpoint.getInstance(0), new BasicILFactory());
         
