--- a/sos-providers/cataloger/cataloger-prv/src/main/resources/META-INF/sorcer/cataloger.config
+++ b/sos-providers/cataloger/cataloger-prv/src/main/resources/META-INF/sorcer/cataloger.config
@@ -10,11 +10,11 @@ sorcer.core.provider.ServiceProvider  {
 		name = "Cataloger";
 		publishedInterfaces = new Class[] { sorcer.core.Cataloger.class };
 		description = "Dynamic catalog of SORCER service providers";
-		location = "Wright-Patterson Air Force Base, Air Force Research Laboratory";
+		location = "Sorcersoft.com Lab";
 		spaceEnabled = false;
 		entries = new Entry[] { 
 			new Comment("Welcome to exertion-oriented programming!"), 
-			new Location("2", "218", "AFRL/RQSE-146") };
+			new Location("", "", "Sorcersoft.com") };
 
         // if not declared the default exporter is BasicJeriExporter
         // exporter = new JrmpExporter(0);
