--- a/sos-providers/dsp/dsp-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/sos-providers/dsp/dsp-prv/src/main/resources/META-INF/sorcer/services.config
@@ -20,10 +20,9 @@ sorcer.core.provider.ServiceProvider {
 	
 	publishedInterfaces = new Class[] { sorcer.service.DatabaseStorer.class };
 	description = "SORCER object storage service";
-	//location="AFRL/RBSD-146";
-	entries = new Entry[] { 
+    entries = new Entry[] {
 		new Comment("Welcome to SORCER storage system!"), 
-		new Location("2", "218", "AFRL/RBSD-146") };
+		new Location("", "", "Sorcersoft.com") };
 	
 	dbHome="${sorcer.home}${/}databases${/}dbfiles_dsp";
 	
