--- a/sos-providers/dsp/dsp-prv/src/main/resources/policy/dsp-prv.config
+++ b/sos-providers/dsp/dsp-prv/src/main/resources/policy/dsp-prv.config
@@ -17,10 +17,9 @@ sorcer.core.provider.ServiceProvider {
 	name = "Object Store";
 	publishedInterfaces = new Class[] { sorcer.service.DatabaseStorer.class };
 	description = "SORCER object storage service";
-	//location="AFRL/RBSD-146";
-	entries = new Entry[] { 
+	entries = new Entry[] {
 		new Comment("Welcome to SORCER storage system!"), 
-		new Location("2", "218", "AFRL/RBSD-146") };
+		new Location("", "", "Sorcersoft.com") };
 	
 	dbHome="${sorcer.home}${/}databases${/}dbfiles_sdb";
 	
