--- a/sos-providers/jobber/jobber-prv/src/main/resources/META-INF/sorcer/jobber.config
+++ b/sos-providers/jobber/jobber-prv/src/main/resources/META-INF/sorcer/jobber.config
@@ -22,7 +22,7 @@ sorcer.core.provider.ServiceProvider {
     description = "SORCER Exertion Execution service with the PUSH flow control";
     entries = new Entry[] { 
 		new Comment("Welcome to exertion-oriented programming!"), 
-		new Location("2", "218", "AFRL/RQSE-146") };
+		new Location("", "", "Sorcersoft.com") };
 	
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
