--- a/sos-providers/logger/logger-prv/src/main/resources/META-INF/sorcer/logger.config
+++ b/sos-providers/logger/logger-prv/src/main/resources/META-INF/sorcer/logger.config
@@ -21,7 +21,7 @@ sorcer.core.provider.ServiceProvider {
 	location = "SORCER Lab, CP310 - CS TTU";
 	publishedInterfaces = new Class[] { sorcer.core.provider.logger.RemoteLogger.class };
 	// add service UI
-	entries = new Entry[] { new Location("2", "218", "AFRL/RQSE-146") };
+	entries = new Entry[] { new Location("", "", "Sorcersoft.com") };
 
 	// if not declared the default exporter is BasicJeriExporter
     	//exporter = new JrmpExporter(0);
