--- a/sos-providers/spacer/spacer-prv/src/main/resources/META-INF/sorcer/spacer.config
+++ b/sos-providers/spacer/spacer-prv/src/main/resources/META-INF/sorcer/spacer.config
@@ -18,7 +18,7 @@ sorcer.core.provider.ServiceProvider {
     location = "SORCER Lab 20B - CS TTU";
     entries = new Entry[] {
 		new Comment("Welcome to exertion-oriented space-based programming!"), 
-		new Location("2", "218", "AFRL/RBSD-146") };
+		new Location("", "", "Sorcersoft.com") };
 		
     // if not declared the default exporter is BasicJeriExporter
     //exporter = new JrmpExporter(0);
