--- a/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/arithmetic-prv.config
+++ b/sos/sos-tests/ju-arithmetic/ju-arithmetic-prv/src/main/resources/META-INF/sorcer/arithmetic-prv.config
@@ -17,7 +17,7 @@ sorcer.core.provider.ServiceProvider {
         /* service provider genetic properties */
 		name = "Arithmetic";
 		description = "Arithmetic - bean provider";
-		location = "AFRL/WPAFB";
+		location = "Sorcersoft.com Lab";
 		publishedInterfaces = new Class[] {
 		    junit.sorcer.core.provider.Arithmetic.class,
             junit.sorcer.core.provider.Adder.class,
