--- a/sos/sos-tests/int-tests/pom.xml
+++ b/sos/sos-tests/int-tests/pom.xml
@@ -14,7 +14,7 @@
 
 	<properties>
 		<maven.test.skip>true</maven.test.skip>
-		<skipTests>true</skipTests>
+		<skipTests>${maven.test.skip}</skipTests>
 	</properties>
 
 	<dependencies>
