Fixed starting locker, deleted rio platform xmls

--- a/bin/blitz/configs/lockmgr.config
+++ b/bin/blitz/configs/lockmgr.config
@@ -8,7 +8,7 @@ import sorcer.jini.lookup.entry.SorcerServiceInfo;
 import org.dancres.blitz.jini.lockmgr.JiniConfig;
 
 org.dancres.blitz.jini.lockmgr {
-	initialGroups = Sorcer.getGroups();
+	initialGroups = Sorcer.getLookupGroups();
 	providerName = "Locker";
 	// needed to support destroy when running 
 	// in the same service node with other providers 
