--- a/configs/boot-http-sorcer.config
+++ b/configs/boot-http-sorcer.config
@@ -108,25 +108,22 @@ com.sun.jini.start {
 	        "org.dancres.blitz.remote.BlitzServiceImpl",
           	new String[] { home + "${/}bin${/}blitz${/}configs${/}blitz.config" }),
 
-/*
 		// MutualExclusion - Locker
-  		new SorcerServiceDescriptor(
-           "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker")
+ /* 		new SorcerServiceDescriptor(
+           "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker"),
            policy,
             ConfigUtil.concat(new Object[] {
-            	Resolver.resolveAbsolute("org.jgroups:jgroups"), ps,
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:locker"), ps,
+            	Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
             	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
-            	Resolver.resolveAbsolute("com.sleepycat:je"), ps,
+            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
+                Resolver.resolveAbsolute("net.jini:jsk-platform")
 
-            	blitzLib, "${/}lockmgr.jar",
-            	ps, otherLib, "${/}jgroups.jar",
-            	ps, home, "${/}lib${/}river${/}lib-dl${/}outrigger-dl.jar",
-            	ps, jiniLibPath, "${/}jsk-platform.jar" }
-            	),
+            }),
             "org.dancres.blitz.jini.lockmgr.ServerImpl",
              new String[] { home + "${/}bin${/}blitz${/}configs${/}lockmgr.config" }),
- */ 
-   		// SORCER Job Service 
+  */
+   		// SORCER Job Service
        		SorcerDescriptorUtil.getJobber(
        			policy,
        			home + "${/}bin${/}sos-providers${/}jobber.config"),
