--- a/configs/startup-boot-prv.config
+++ b/configs/startup-boot-prv.config
@@ -12,10 +12,10 @@ import sorcer.resolver.Resolver;
 com.sun.jini.start {
  	home = "${sorcer.home}";
 	// webster root directories
-	jiniLibPath 	= home + "${/}lib${/}river";
 	deployPath 	= home + "${/}deploy";
 	rootDir = Resolver.getRootDir();
-	
+	repoDir = Resolver.getRepoDir();
+
 	//port = Booter.getWebsterPort(); 
 	port = 0;
 	//address = Booter.getWebsterInterface();
@@ -33,7 +33,7 @@ com.sun.jini.start {
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
         SorcerDescriptorUtil.getWebster(policy, port,
                                          new String[] { 
-                                                        jiniLibPath,
+                                                        repoDir,
                                                         deployPath,
                                                         rootDir }),
     
