--- a/configs/boot-sorcer.config
+++ b/configs/boot-sorcer.config
@@ -95,20 +95,22 @@ com.sun.jini.start {
 
 
 
-/*
 		// MutualExclusion - Locker
-  		new SorcerServiceDescriptor(
-           "lockmgr-dl.jar",
-           policy, 
+ /* 		new SorcerServiceDescriptor(
+           "" + Resolver.resolveRelative("org.sorcersoft.sorcer:locker"),
+           policy,
             ConfigUtil.concat(new Object[] {
-            	blitzLib, "${/}lockmgr.jar",
-            	ps, otherLib, "${/}jgroups.jar",
-            	ps, home, "${/}lib${/}river${/}lib-dl${/}outrigger-dl.jar",
-            	ps, jiniLibPath, "${/}jsk-platform.jar" }
-            	),
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:locker"), ps,
+            	Resolver.resolveAbsolute("org.jgroups:jgroups:2.12.1.Final"), ps,
+            	Resolver.resolveAbsolute("org.dancres.blitz:blitzui"), ps,
+            	Resolver.resolveAbsolute("org.apache.river:outrigger-dl"), ps,
+                Resolver.resolveAbsolute("net.jini:jsk-platform")
+
+            }),
             "org.dancres.blitz.jini.lockmgr.ServerImpl",
              new String[] { home + "${/}bin${/}blitz${/}configs${/}lockmgr.config" }),
- */ 
+  */
+
    		// SORCER Job Service 
        		SorcerDescriptorUtil.getJobber(
        			policy,
