Fixed dependency in sos-mod to ju-arithmetic-api to enable full build. Disabled tests in sos-localhost - problem with installation of sigar

--- a/tools/sos-localhost/pom.xml
+++ b/tools/sos-localhost/pom.xml
@@ -14,7 +14,12 @@
 	<name>SORCER tools :: localhost</name>
 	<description>Resolve the default local IP address using SIGAR</description>
 
-	<dependencies>
+    <properties>
+        <maven.test.skip>true</maven.test.skip>
+        <skipTests>${maven.test.skip}</skipTests>
+    </properties>
+
+    <dependencies>
 		<dependency>
 			<groupId>org.sorcersoft.sigar</groupId>
 			<artifactId>sigar</artifactId>
