[maven plugin] fix codebase, revert services.config

--- a/examples/first/first-prv/pom.xml
+++ b/examples/first/first-prv/pom.xml
@@ -30,6 +30,11 @@
 			<artifactId>commons-prv</artifactId>
 			<version>${v.sorcer}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-env</artifactId>
+			<version>${v.sorcer}</version>
+		</dependency>
 
 		<!-- CodeBase -->
 		<dependency>
@@ -49,19 +54,6 @@
 			</exclusions>
 		</dependency>
 
-		<!-- requestor codebase -->
-		<dependency>
-			<groupId>au.net.Zeus</groupId>
-			<artifactId>reference-collections</artifactId>
-			<version>1.0.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.github.stephenc.high-scale-lib</groupId>
-			<artifactId>high-scale-lib</artifactId>
-			<version>1.1.4</version>
-			<scope>test</scope>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -89,9 +81,6 @@
 						<configuration>
 							<mainClass>com.example.sorcer.SampleServiceTester</mainClass>
 							<scope>test</scope>
-							<codebase>
-								<codebase>au.net.Zeus:reference-collections:1.0.1</codebase>
-							</codebase>
 						</configuration>
 					</execution>
 					<execution>
