--- a/examples/first/first-sui/pom.xml
+++ b/examples/first/first-sui/pom.xml
@@ -25,5 +25,10 @@
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-platform</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.jini.lookup</groupId>
+			<artifactId>serviceui</artifactId>
+			<version>2.2.1</version>
+		</dependency>
 	</dependencies>
 </project>
