--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>sorcer-root</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-	<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>distribution</artifactId>
     <name>SORCER distribution</name>
