--- a/examples/ex1/ex1-prv/pom.xml
+++ b/examples/ex1/ex1-prv/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex1</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>ex1-prv</artifactId>
