--- a/examples/ex1/ex1-req-api/pom.xml
+++ b/examples/ex1/ex1-req-api/pom.xml
@@ -7,10 +7,9 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex1</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
     <artifactId>ex1-req-api</artifactId>
     <name>SORCER examples :: ex1 :: req :: api</name>
 
