--- a/examples/ex1/pom.xml
+++ b/examples/ex1/pom.xml
@@ -6,12 +6,13 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
 		<artifactId>examples</artifactId>
 	</parent>
 
 	<artifactId>ex1</artifactId>
 	<packaging>pom</packaging>
+
 	<name>SORCER examples :: ex1</name>
 	<description>SORCER</description>
 	<url>http://sorcersoft.org/</url>
