--- a/examples/ex2/ex2-prv/pom.xml
+++ b/examples/ex2/ex2-prv/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex2</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>ex2-prv</artifactId>
@@ -18,7 +18,8 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>sos-platform</artifactId>
         	<version>${v.sorcer}</version>
-        </dependency>        <dependency>
+        </dependency>
+		<dependency>
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>ex2-api</artifactId>
             <version>${project.version}</version>	
