--- a/examples/ex2/ex2-req/pom.xml
+++ b/examples/ex2/ex2-req/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex2</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>ex2-req</artifactId>
@@ -32,12 +32,10 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.2</version>
         </dependency>
         <dependency>
             <groupId>gsbase</groupId>
             <artifactId>gsbase</artifactId>
-            <version>2.0.1</version>
         </dependency>
     </dependencies>
 </project>
