--- a/examples/ex4/ex4-req/pom.xml
+++ b/examples/ex4/ex4-req/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex4</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>org.sorcersoft.sorcer</groupId>
