--- a/examples/ex5/ex5-api/pom.xml
+++ b/examples/ex5/ex5-api/pom.xml
@@ -7,10 +7,9 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex5</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
     <artifactId>ex5-api</artifactId>
     <name>SORCER examples :: ex5 :: api</name>
 
