--- a/examples/ex5/pom.xml
+++ b/examples/ex5/pom.xml
@@ -6,8 +6,8 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
 		<artifactId>examples</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>ex5</artifactId>
