--- a/examples/ex6/ex6-api/pom.xml
+++ b/examples/ex6/ex6-api/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex6</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>ex6-api</artifactId>
