--- a/examples/ex6/ex6-prv/pom.xml
+++ b/examples/ex6/ex6-prv/pom.xml
@@ -7,10 +7,9 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
         <artifactId>ex6</artifactId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.sorcersoft.sorcer</groupId>
     <artifactId>ex6-prv</artifactId>
     <name>SORCER examples :: ex6 :: prv</name>
     
