--- a/sos-providers/dbp/pom.xml
+++ b/sos-providers/dbp/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos-providers</artifactId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
