--- a/sos-providers/dsp/dsp-prv/pom.xml
+++ b/sos-providers/dsp/dsp-prv/pom.xml
@@ -6,7 +6,7 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
 		<artifactId>dsp</artifactId>
 	</parent>
 
