--- a/sos-providers/exerter/pom.xml
+++ b/sos-providers/exerter/pom.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>sos-providers</artifactId>
-        <groupId>org.sorcersoft.sorcer</groupId>
-        <version>13.1</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>sos-providers</artifactId>
+		<groupId>org.sorcersoft.sorcer</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>exerter</artifactId>
-    <name>SORCER OS :: providers :: exerter</name>
-    <packaging>pom</packaging>
-    <modules>
-	<module>exerter-prv</module>
-    </modules>
+	<artifactId>exerter</artifactId>
+	<name>SORCER OS :: providers :: exerter</name>
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>exerter-prv</module>
+	</modules>
 </project>
