--- a/sos-providers/exertmonitor/exertmonitor-prv/pom.xml
+++ b/sos-providers/exertmonitor/exertmonitor-prv/pom.xml
@@ -6,8 +6,8 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
 		<artifactId>exertmonitor</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>exertmonitor-prv</artifactId>
