--- a/sos-providers/logger/pom.xml
+++ b/sos-providers/logger/pom.xml
@@ -1,19 +1,19 @@
 <project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+		xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
-    <parent>
-        <groupId>org.sorcersoft.sorcer</groupId>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos-providers</artifactId>
-		<version>13.1</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
-    <artifactId>logger</artifactId>
-    <name>SORCER OS :: providers :: logger</name>
-    <packaging>pom</packaging>
-    <modules>
-	<module>logger-prv</module>
-	<module>logger-sui</module>
-    </modules>
+	<artifactId>logger</artifactId>
+	<name>SORCER OS :: providers :: logger</name>
+	<packaging>pom</packaging>
+	<modules>
+		<module>logger-prv</module>
+		<module>logger-sui</module>
+	</modules>
 </project>
