--- a/sos-providers/pom.xml
+++ b/sos-providers/pom.xml
@@ -6,15 +6,13 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
-		<artifactId>sorcer-root</artifactId>
+		<artifactId>sorcer</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sos-providers</artifactId>
 	<packaging>pom</packaging>
 	<name>SORCER OS :: sos-providers</name>
-	<description>SORCER</description>
-	<url>http://sorcersoft.org/</url>
 
 	<modules>
 		<module>jobber</module>
