--- a/sos-providers/spacer/pom.xml
+++ b/sos-providers/spacer/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos-providers</artifactId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>spacer</artifactId>
