--- a/sos/commons-req/pom.xml
+++ b/sos/commons-req/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<artifactId>sos</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>commons-req</artifactId>
