--- a/sos/pom.xml
+++ b/sos/pom.xml
@@ -6,15 +6,13 @@
 
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>13.1</version>
-        <artifactId>sorcer-root</artifactId>
-    </parent>
+        <artifactId>sorcer</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
     <artifactId>sos</artifactId>
     <packaging>pom</packaging>
     <name>SORCER OS</name>
-    <description>SORCER</description>
-    <url>http://sorcersoft.org/</url>
 
     <modules>
         <module>sos-env</module>
