--- a/sos/sos-env/pom.xml
+++ b/sos/sos-env/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
         <artifactId>sos</artifactId>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
     <artifactId>sos-env</artifactId>
     <name>SORCER OS :: env</name>
