--- a/sos/sos-platform/pom.xml
+++ b/sos/sos-platform/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>sos</artifactId>
-		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
-	</parent>
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>sos</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<artifactId>sos-platform</artifactId>
 	<name>SORCER OS :: platform</name>
