--- a/sos/sos-security-sui/pom.xml
+++ b/sos/sos-security-sui/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
 		<artifactId>sos</artifactId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sos-security-sui</artifactId>
