--- a/sos/sos-util/pom.xml
+++ b/sos/sos-util/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>sos</artifactId>
-        <groupId>org.sorcersoft.sorcer</groupId>
-        <version>13.1</version>
+		<groupId>org.sorcersoft.sorcer</groupId>
+		<artifactId>sos</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>sos-util</artifactId>
