--- a/tools/browser/pom.xml
+++ b/tools/browser/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>org.sorcersoft.sorcer</groupId>
-        <version>13.1</version>
+        <version>1.0-SNAPSHOT</version>
         <artifactId>tools</artifactId>
     </parent>
 
@@ -81,7 +81,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
-                <version>1.1.1</version>
+                <version>1.2.1</version>
 
                 <configuration>
                     <mainClass>sorcer.ssb.SorcerServiceBrowser</mainClass>
