--- a/tools/locker/pom.xml
+++ b/tools/locker/pom.xml
@@ -6,8 +6,8 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
 		<artifactId>tools</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>locker</artifactId>
