--- a/tools/pom.xml
+++ b/tools/pom.xml
@@ -6,8 +6,8 @@
 
 	<parent>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
-		<artifactId>sorcer-root</artifactId>
+		<artifactId>sorcer</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>tools</artifactId>
