--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>tools</artifactId>
 		<groupId>org.sorcersoft.sorcer</groupId>
-		<version>13.1</version>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>sorcer-maven-plugin</artifactId>
