--- a/tools/sorcer-maven-plugin/src/it/simple-it/pom.xml
+++ b/tools/sorcer-maven-plugin/src/it/simple-it/pom.xml
@@ -18,7 +18,7 @@
 			<plugin>
 				<groupId>org.sorcersoft.sorcer</groupId>
 				<artifactId>sorcer-maven-plugin</artifactId>
-				<version>13.1</version>
+				<version>1.0-SNAPSHOT</version>
 				<goals>
 					<goal>sorcer</goal>
 				</goals>
