[maven-plugin] add configurable classpath and codebase to requestor, fix dependencies [common-run] remove deprecated libs

--- a/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -22,6 +22,7 @@ com.sun.jini.start {
 			Resolver.resolveCodeBase(
 				new ArtifactCoordinates[]{
 					ArtifactCoordinates.coords("com.example.sorcer:first-api:1.0-SNAPSHOT"),
+//					ArtifactCoordinates.coords("net.jini.lookup:serviceui"),
 					Artifact.getSosPlatform()
 				}
 			),
