--- a/tools/sorcer-maven-plugin/pom.xml
+++ b/tools/sorcer-maven-plugin/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>sos-boot</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.sorcersoft.sorcer</groupId>
+			<artifactId>sos-webster</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.maven</groupId>
