--- a/tools/sos-boot/pom.xml
+++ b/tools/sos-boot/pom.xml
@@ -30,6 +30,7 @@
 			<groupId>org.sorcersoft.sorcer</groupId>
 			<artifactId>sos-webster</artifactId>
 			<version>${v.sorcer}</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
             <groupId>org.apache.river</groupId>
@@ -67,6 +68,7 @@
 			<groupId>net.jini.lookup</groupId>
 			<artifactId>serviceui</artifactId>
 			<version>${v.jini}</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
