ServiceRequstor - reverted to the version with codebase preparer, updated examples scripts, resolving mechanism and installer for distribution

--- a/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/services.config
@@ -6,45 +6,38 @@ import sorcer.provider.boot.SorcerDescriptorUtil;
 import sorcer.provider.boot.SorcerServiceDescriptor;
 import sorcer.core.SorcerEnv;
 import sorcer.resolver.Resolver;
-import sorcer.util.Artifact;
 
 com.sun.jini.start {
 	home = "${sorcer.home}";
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
 
-	// webster root directories
-    jiniLibPath 	 = home + "${/}lib${/}river${/}lib";
-    deployPath 		 = home + "${/}deploy";
-    httpData 		 = home + "${/}data";
-	repo 			 = SorcerEnv.getRepoDir() + "/";
-
-	port = 0;
-
-
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up 10 directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug, boolean isDaemon)
-        SorcerDescriptorUtil.getWebster(policy,
-                                         port,
-                                         new String[] { repo,
-                                                        jiniLibPath,
-                                                        httpData,
-                                                        deployPath
-                                                        }
-                                         ),
+        SorcerDescriptorUtil.getWebster(policy),
+
         new SorcerServiceDescriptor(
- 			Resolver.resolveCodebase(Artifact.sorcer("ex1-api"), Artifact.sorcer("sos-platform")),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
-            Resolver.resolveAbsolute(Artifact.sorcer("ex1-api"), Artifact.sorcer("ex1-prv")),
+            ConfigUtil.concat(new Object[] {
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-api"), ps,
+            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-prv"), ps
+            }),
 	        "sorcer.ex1.provider.WhoIsItProvider1",
           	new String[] { home + "/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt1-prv.config" }
         ),
+
         new SorcerServiceDescriptor(
- 			Resolver.resolveCodebase(Artifact.sorcer("ex1-api"), Artifact.sorcer("sos-platform")),
+ 			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex1-api")
+ 			+" "+Resolver.resolveRelative("org.sorcersoft.sorcer:sos-platform"),
             policy,
-            Resolver.resolveAbsolute(Artifact.sorcer("ex1-api"), Artifact.sorcer("ex1-prv")),
-	        "sorcer.ex1.provider.WhoIsItProvider2",
+            ConfigUtil.concat(new Object[] {
+                Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-api"), ps,
+            	Resolver.resolveAbsolute("org.sorcersoft.sorcer:ex1-prv"), ps
+            }),
+            "sorcer.ex1.provider.WhoIsItProvider2",
           	new String[] { home + "/examples/ex1/ex1-prv/src/main/resources/META-INF/sorcer/whoIsIt2-prv.config" }
         )
     };
