--- a/examples/ex6/ex6-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/examples/ex6/ex6-prv/src/main/resources/META-INF/sorcer/services.config
@@ -12,13 +12,7 @@ com.sun.jini.start {
 	policy = "${java.security.policy}";
 	ps = System.getProperty("path.separator");
 	
-	// webster root directories
-	jiniLibPath 	= home + "${/}lib${/}river${/}lib";
-	jiniLibDLPath 	= home + "${/}lib${/}river${/}lib-dl";
-	deployPath 	= home + "${/}deploy";
-    repo = SorcerEnv.getRepoDir() + "/";
-
-	//port = Booter.getWebsterPort(); 
+	//port = Booter.getWebsterPort();
 	//port = 0;
 	//address = Booter.getWebsterInterface();
 	//startPort = Booter.getWebsterStartPort();
@@ -27,12 +21,8 @@ com.sun.jini.start {
     serviceDescriptors = new ServiceDescriptor[] {
         /* SORCER Webster, set to serve up root directories */
         // (String policy, int port, String[] roots, String address, int startPort, int endPort, boolean debug)
-      /*  SorcerDescriptorUtil.getWebster(policy, port,
-                                         new String[] { repo,
-                                         				jiniLibDLPath,
-                                                        jiniLibPath,
-                                                        deployPath
-                                                         }),
+      /*  SorcerDescriptorUtil.getWebster(policy, port),
+
         */
   new SorcerServiceDescriptor(
  			""+Resolver.resolveRelative("org.sorcersoft.sorcer:ex6-api")
