--- a/distribution/src/main/examples/pom.xml
+++ b/distribution/src/main/examples/pom.xml
@@ -20,6 +20,22 @@
         <module>ex5</module>
         <module>ex6</module>
     </modules>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.8.2</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>gsbase</groupId>
+                <artifactId>gsbase</artifactId>
+                <version>2.0.1</version>
+                <scope>test</scope>
+            </dependency>
+    </dependencies>
+    </dependencyManagement>
 
     <properties>
         <v.sorcer>${v.sorcer}</v.sorcer>
