[pom] make site-deploy target directory a variable

--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
 	<distributionManagement>
 		<site>
 			<id>hashnot</id>
-			<url>scp://hashnot.com/srv/www/sorcer/</url>
+			<url>file://${siteDeployDir}</url>
 		</site>
 	</distributionManagement>
 
