Fixed ex6 and ex2 - tested with distribution on XP

--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -104,7 +104,7 @@
             <groupId>org.sorcersoft.sorcer</groupId>
             <artifactId>dependencies</artifactId>
             <version>${project.version}</version>
-            <scope>import</scope>
+           <!-- <scope>import</scope>-->
         </dependency>
 
         <dependency>
