--- a/distribution/src/main/examples/pom.xml
+++ b/distribution/src/main/examples/pom.xml
@@ -59,22 +59,16 @@
                 <target>1.6</target>
             </configuration>
         </plugin>
-      <!--            <plugin>
-                      <groupId>org.apache.maven.plugins</groupId>
-                      <artifactId>maven-antrun-plugin</artifactId>
-                      <version>1.7</version>
-                      <executions>
-                          <execution>
-                              <id>initialize</id>
-                              <phase>initialize</phase>
-                              <configuration>
-                              </configuration>
-                              <goals>
-                                  <goal>run</goal>
-                              </goals>
-                          </execution>
-                      </executions>
-                  </plugin>-->
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                  <systemPropertyVariables>
+                      <RIO_HOME>${env.SORCER_HOME}/lib/rio</RIO_HOME>
+                      <buildDirectory>${project.build.directory}</buildDirectory>
+                  </systemPropertyVariables>
+              </configuration>
+          </plugin>
       </plugins>
     </build>
     <repositories>
