--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -22,4 +22,19 @@
 		<module>ex6</module>
 		<module>first</module>
 	</modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemPropertyVariables>
+                        <RIO_HOME>${env.SORCER_HOME}/lib/rio</RIO_HOME>
+                        <buildDirectory>${project.build.directory}</buildDirectory>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
