--- a/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
+++ b/examples/first/first-prv/src/main/resources/META-INF/sorcer/services.config
@@ -6,6 +6,7 @@ import sorcer.core.SorcerEnv;
 import sorcer.resolver.Resolver;
 import sorcer.util.Artifact;
 import sorcer.util.ArtifactCoordinates;
+import sorcer.provider.boot.Booter;
 
 com.sun.jini.start {
 	home = "${sorcer.home}";
@@ -16,7 +17,23 @@ com.sun.jini.start {
 	serviceDescriptors = new ServiceDescriptor[] {
 		/* SORCER Webster, set to serve up root directories */
 		// (String policy, int port, String[] roots)
-		SorcerDescriptorUtil.getWebster(policy, port, new String[] { SorcerEnv.getRepoDir() }),
+		SorcerDescriptorUtil.getWebster(policy, port, Booter.getWebsterHostName(), SorcerEnv.getWebsterRoots()),
+
+	    new SorcerServiceDescriptor(
+	      	Resolver.resolveCodeBase(
+	      		new ArtifactCoordinates[]{
+	      			ArtifactCoordinates.coords("org.apache.river:reggie-dl")
+	      		}
+	      	),
+            policy,
+            Resolver.resolveClassPath(
+            	new ArtifactCoordinates[]{
+            		ArtifactCoordinates.coords("org.apache.river:reggie")
+				}
+			),
+            "com.sun.jini.reggie.TransientRegistrarImpl",
+            new String[] { home + "/configs/jini/configs/reggie.config" }
+		),
 
 		new SorcerServiceDescriptor(
 			Resolver.resolveCodeBase(
